manifests/bootstrapping-onprem/06-argocd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: argocd-repo-server
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /home/argocd/.aws
              name: argocd-aws-credentials
            - mountPath: /usr/local/bin/kustomize
              name: custom-tools
              subPath: kustomize
              # Verify this matches a XDG_CONFIG_HOME=/.config env variable
            - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
              name: custom-tools
              subPath: ksops
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: argocd-aws-credentials
          secret:
            defaultMode: 420
            secretName: argocd-aws-credentials
