manifests/bootstrapping-onprem/06-argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: istio
    external-dns.alpha.kubernetes.io/hostname: argocd.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/access: private
spec:
  tls:
  - hosts:
    - argocd.homelab.danmanners.com
    secretName: argocd-homelab-cert
  rules:
  - host: argocd.homelab.danmanners.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
